// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Badge default 1`] = `
<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 20,
      "width": 400,
    }
  }
>
  <span
    className="badge"
  >
    14
  </span>
</div>
`;

exports[`Storyshots Badge with background color 1`] = `
<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 20,
      "width": 400,
    }
  }
>
  <span
    className="badge bg-red"
  >
    18
  </span>
</div>
`;

exports[`Storyshots Box body without padding 1`] = `
<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 20,
      "width": 400,
    }
  }
>
  <div
    className="box"
  >
    <div
      className="box-header"
    >
      <h3
        className="box-title"
      >
        No padding
      </h3>
    </div>
    <div
      className="box-body no-padding"
    >
      The body of the box
    </div>
  </div>
</div>
`;

exports[`Storyshots Box bordered header 1`] = `
<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 20,
      "width": 400,
    }
  }
>
  <div
    className="box"
  >
    <div
      className="box-header with-border"
    >
      <h3
        className="box-title"
      >
        Bordered Box Example
      </h3>
    </div>
    <div
      className="box-body"
    >
      The body of the box
    </div>
  </div>
</div>
`;

exports[`Storyshots Box collapsable 1`] = `
<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 20,
      "width": 400,
    }
  }
>
  <div
    className="box"
  >
    <div
      className="box-header"
    >
      <h3
        className="box-title"
      >
        Collapsable
      </h3>
      <div
        className="box-tools"
      >
        <button
          className="btn btn-box-tool"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-minus"
          />
        </button>
      </div>
    </div>
    <div
      className="box-body"
    >
      The body of the box
    </div>
  </div>
</div>
`;

exports[`Storyshots Box default 1`] = `
<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 20,
      "width": 400,
    }
  }
>
  <div
    className="box"
  >
    <div
      className="box-header"
    >
      <h3
        className="box-title"
      >
        Default Box Example
      </h3>
    </div>
    <div
      className="box-body"
    >
      The body of the box
    </div>
  </div>
</div>
`;

exports[`Storyshots Box exandable 1`] = `
<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 20,
      "width": 400,
    }
  }
>
  <div
    className="box collapsed-box"
  >
    <div
      className="box-header"
    >
      <h3
        className="box-title"
      >
        Collapsable
      </h3>
      <div
        className="box-tools"
      >
        <button
          className="btn btn-box-tool"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-plus"
          />
        </button>
      </div>
    </div>
    <div
      className="box-body"
    >
      The body of the box
    </div>
  </div>
</div>
`;

exports[`Storyshots Box footer 1`] = `
<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 20,
      "width": 400,
    }
  }
>
  <div
    className="box"
  >
    <div
      className="box-header"
    >
      <h3
        className="box-title"
      >
        Footer
      </h3>
    </div>
    <div
      className="box-body"
    >
      The body of the box
    </div>
    <div
      className="box-footer"
    >
      The footer of the box
    </div>
  </div>
</div>
`;

exports[`Storyshots Box loading 1`] = `
<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 20,
      "width": 400,
    }
  }
>
  <div
    className="box"
  >
    <div
      className="box-header"
    >
      <h3
        className="box-title"
      >
        Loading State
      </h3>
    </div>
    <div
      className="box-body"
    >
      The body of the box
    </div>
    <div
      className="overlay"
    >
      <span
        aria-hidden={true}
        className="fa fa-refresh fa-spin"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Box removable 1`] = `
<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 20,
      "width": 400,
    }
  }
>
  <div
    className="box"
  >
    <div
      className="box-header"
    >
      <h3
        className="box-title"
      >
        Removable
      </h3>
      <div
        className="box-tools"
      >
        <button
          className="btn btn-box-tool"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-times"
          />
        </button>
      </div>
    </div>
    <div
      className="box-body"
    >
      The body of the box
    </div>
  </div>
</div>
`;

exports[`Storyshots Box solid with default style 1`] = `
<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 20,
      "width": 400,
    }
  }
>
  <div
    className="box box-default box-solid"
  >
    <div
      className="box-header"
    >
      <h3
        className="box-title"
      >
        Solid Box Example
      </h3>
    </div>
    <div
      className="box-body"
    >
      The body of the box
    </div>
  </div>
</div>
`;

exports[`Storyshots Box with style 1`] = `
<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 20,
      "width": 400,
    }
  }
>
  <div
    className="box box-primary"
  >
    <div
      className="box-header"
    >
      <h3
        className="box-title"
      >
        Primary Box Example
      </h3>
    </div>
    <div
      className="box-body"
    >
      The body of the box
    </div>
  </div>
</div>
`;

exports[`Storyshots DataTable first page 1`] = `
<div
  style={
    Object {
      "marginLeft": 20,
      "marginRight": 20,
      "marginTop": 20,
    }
  }
>
  <div
    className="dataTables_wrapper dt-bootstrap"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <table
          className="dataTable table table-striped table-bordered"
        >
          <thead>
            <tr>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Rendering engine
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Browser
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Platform(s)
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Engine version
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                CSS grade
              </th>
            </tr>
          </thead>
          <tfoot>
            <tr>
              <th>
                Rendering engine
              </th>
              <th>
                Browser
              </th>
              <th>
                Platform(s)
              </th>
              <th>
                Engine version
              </th>
              <th>
                CSS grade
              </th>
            </tr>
          </tfoot>
          <tbody>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 1.0
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 1.5
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 2.0
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 3.0
              </td>
              <td>
                Win 2k+ / OSX.3+
              </td>
              <td>
                1.9
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Camino 1.0
              </td>
              <td>
                OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Camino 1.5
              </td>
              <td>
                OSX.3+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape 7.2
              </td>
              <td>
                Win 95+ / MacOS 8.6-9.2
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape Browser 8
              </td>
              <td>
                Win 98SE+
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape Navigator 9
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Mozilla 1.0
              </td>
              <td>
                Win 95+ / OSX.1+
              </td>
              <td>
                1
              </td>
              <td>
                A
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-5"
      >
        <div
          className="dataTables_info"
        >
          Showing 
          1
           to 
          10
           of 
          40
           entries
        </div>
      </div>
      <div
        className="col-sm-7"
      >
        <div
          className="dataTables_paginate paging_simple_numbers"
        >
          <ul
            className="pagination"
          >
            <li
              className="disabled"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
                style={
                  Object {
                    "pointerEvents": "none",
                  }
                }
                tabIndex={-1}
              >
                <span
                  aria-label="Previous"
                >
                  Previous
                </span>
              </a>
            </li>
            <li
              className="active"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                1
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                2
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                3
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                4
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                <span
                  aria-label="Next"
                >
                  Next
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataTable intermediary page 1`] = `
<div
  style={
    Object {
      "marginLeft": 20,
      "marginRight": 20,
      "marginTop": 20,
    }
  }
>
  <div
    className="dataTables_wrapper dt-bootstrap"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <table
          className="dataTable table table-striped table-bordered"
        >
          <thead>
            <tr>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Rendering engine
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Browser
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Platform(s)
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Engine version
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                CSS grade
              </th>
            </tr>
          </thead>
          <tfoot>
            <tr>
              <th>
                Rendering engine
              </th>
              <th>
                Browser
              </th>
              <th>
                Platform(s)
              </th>
              <th>
                Engine version
              </th>
              <th>
                CSS grade
              </th>
            </tr>
          </tfoot>
          <tbody>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 1.0
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 1.5
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 2.0
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 3.0
              </td>
              <td>
                Win 2k+ / OSX.3+
              </td>
              <td>
                1.9
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Camino 1.0
              </td>
              <td>
                OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Camino 1.5
              </td>
              <td>
                OSX.3+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape 7.2
              </td>
              <td>
                Win 95+ / MacOS 8.6-9.2
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape Browser 8
              </td>
              <td>
                Win 98SE+
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape Navigator 9
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Mozilla 1.0
              </td>
              <td>
                Win 95+ / OSX.1+
              </td>
              <td>
                1
              </td>
              <td>
                A
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-5"
      >
        <div
          className="dataTables_info"
        >
          Showing 
          11
           to 
          20
           of 
          40
           entries
        </div>
      </div>
      <div
        className="col-sm-7"
      >
        <div
          className="dataTables_paginate paging_simple_numbers"
        >
          <ul
            className="pagination"
          >
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                <span
                  aria-label="Previous"
                >
                  Previous
                </span>
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                1
              </a>
            </li>
            <li
              className="active"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                2
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                3
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                4
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                <span
                  aria-label="Next"
                >
                  Next
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataTable no items 1`] = `
<div
  style={
    Object {
      "marginLeft": 20,
      "marginRight": 20,
      "marginTop": 20,
    }
  }
>
  <div
    className="dataTables_wrapper dt-bootstrap"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <table
          className="dataTable table table-striped table-bordered"
        >
          <thead>
            <tr>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Rendering engine
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Browser
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Platform(s)
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Engine version
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                CSS grade
              </th>
            </tr>
          </thead>
          <tfoot>
            <tr>
              <th>
                Rendering engine
              </th>
              <th>
                Browser
              </th>
              <th>
                Platform(s)
              </th>
              <th>
                Engine version
              </th>
              <th>
                CSS grade
              </th>
            </tr>
          </tfoot>
          <tbody />
        </table>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-5"
      >
        <div
          className="dataTables_info"
        >
          Showing 
          0
           to 
          0
           of 
          0
           entries
        </div>
      </div>
      <div
        className="col-sm-7"
      >
        <div
          className="dataTables_paginate paging_simple_numbers"
        >
          <ul
            className="pagination"
          >
            <li
              className="disabled"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
                style={
                  Object {
                    "pointerEvents": "none",
                  }
                }
                tabIndex={-1}
              >
                <span
                  aria-label="Previous"
                >
                  Previous
                </span>
              </a>
            </li>
            <li
              className="disabled"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
                style={
                  Object {
                    "pointerEvents": "none",
                  }
                }
                tabIndex={-1}
              >
                <span
                  aria-label="Next"
                >
                  Next
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataTable sorted ascending 1`] = `
<div
  style={
    Object {
      "marginLeft": 20,
      "marginRight": 20,
      "marginTop": 20,
    }
  }
>
  <div
    className="dataTables_wrapper dt-bootstrap"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <table
          className="dataTable table table-striped table-bordered"
        >
          <thead>
            <tr>
              <th
                className="sorting_asc"
                onClick={[Function]}
              >
                Rendering engine
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Browser
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Platform(s)
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Engine version
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                CSS grade
              </th>
            </tr>
          </thead>
          <tfoot>
            <tr>
              <th>
                Rendering engine
              </th>
              <th>
                Browser
              </th>
              <th>
                Platform(s)
              </th>
              <th>
                Engine version
              </th>
              <th>
                CSS grade
              </th>
            </tr>
          </tfoot>
          <tbody>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 1.0
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 1.5
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 2.0
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 3.0
              </td>
              <td>
                Win 2k+ / OSX.3+
              </td>
              <td>
                1.9
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Camino 1.0
              </td>
              <td>
                OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Camino 1.5
              </td>
              <td>
                OSX.3+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape 7.2
              </td>
              <td>
                Win 95+ / MacOS 8.6-9.2
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape Browser 8
              </td>
              <td>
                Win 98SE+
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape Navigator 9
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Mozilla 1.0
              </td>
              <td>
                Win 95+ / OSX.1+
              </td>
              <td>
                1
              </td>
              <td>
                A
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-5"
      >
        <div
          className="dataTables_info"
        >
          Showing 
          31
           to 
          40
           of 
          40
           entries
        </div>
      </div>
      <div
        className="col-sm-7"
      >
        <div
          className="dataTables_paginate paging_simple_numbers"
        >
          <ul
            className="pagination"
          >
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                <span
                  aria-label="Previous"
                >
                  Previous
                </span>
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                1
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                2
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                3
              </a>
            </li>
            <li
              className="active"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                4
              </a>
            </li>
            <li
              className="disabled"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
                style={
                  Object {
                    "pointerEvents": "none",
                  }
                }
                tabIndex={-1}
              >
                <span
                  aria-label="Next"
                >
                  Next
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataTable sorted descending 1`] = `
<div
  style={
    Object {
      "marginLeft": 20,
      "marginRight": 20,
      "marginTop": 20,
    }
  }
>
  <div
    className="dataTables_wrapper dt-bootstrap"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <table
          className="dataTable table table-striped table-bordered"
        >
          <thead>
            <tr>
              <th
                className="sorting_desc"
                onClick={[Function]}
              >
                Rendering engine
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Browser
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Platform(s)
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Engine version
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                CSS grade
              </th>
            </tr>
          </thead>
          <tfoot>
            <tr>
              <th>
                Rendering engine
              </th>
              <th>
                Browser
              </th>
              <th>
                Platform(s)
              </th>
              <th>
                Engine version
              </th>
              <th>
                CSS grade
              </th>
            </tr>
          </tfoot>
          <tbody>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 1.0
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 1.5
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 2.0
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 3.0
              </td>
              <td>
                Win 2k+ / OSX.3+
              </td>
              <td>
                1.9
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Camino 1.0
              </td>
              <td>
                OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Camino 1.5
              </td>
              <td>
                OSX.3+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape 7.2
              </td>
              <td>
                Win 95+ / MacOS 8.6-9.2
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape Browser 8
              </td>
              <td>
                Win 98SE+
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape Navigator 9
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Mozilla 1.0
              </td>
              <td>
                Win 95+ / OSX.1+
              </td>
              <td>
                1
              </td>
              <td>
                A
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-5"
      >
        <div
          className="dataTables_info"
        >
          Showing 
          31
           to 
          40
           of 
          40
           entries
        </div>
      </div>
      <div
        className="col-sm-7"
      >
        <div
          className="dataTables_paginate paging_simple_numbers"
        >
          <ul
            className="pagination"
          >
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                <span
                  aria-label="Previous"
                >
                  Previous
                </span>
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                1
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                2
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                3
              </a>
            </li>
            <li
              className="active"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                4
              </a>
            </li>
            <li
              className="disabled"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
                style={
                  Object {
                    "pointerEvents": "none",
                  }
                }
                tabIndex={-1}
              >
                <span
                  aria-label="Next"
                >
                  Next
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataTable total items equal to page count 1`] = `
<div
  style={
    Object {
      "marginLeft": 20,
      "marginRight": 20,
      "marginTop": 20,
    }
  }
>
  <div
    className="dataTables_wrapper dt-bootstrap"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <table
          className="dataTable table table-striped table-bordered"
        >
          <thead>
            <tr>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Rendering engine
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Browser
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Platform(s)
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Engine version
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                CSS grade
              </th>
            </tr>
          </thead>
          <tfoot>
            <tr>
              <th>
                Rendering engine
              </th>
              <th>
                Browser
              </th>
              <th>
                Platform(s)
              </th>
              <th>
                Engine version
              </th>
              <th>
                CSS grade
              </th>
            </tr>
          </tfoot>
          <tbody>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 1.0
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 1.5
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 2.0
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Firefox 3.0
              </td>
              <td>
                Win 2k+ / OSX.3+
              </td>
              <td>
                1.9
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Camino 1.0
              </td>
              <td>
                OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Camino 1.5
              </td>
              <td>
                OSX.3+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape 7.2
              </td>
              <td>
                Win 95+ / MacOS 8.6-9.2
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape Browser 8
              </td>
              <td>
                Win 98SE+
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape Navigator 9
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Mozilla 1.0
              </td>
              <td>
                Win 95+ / OSX.1+
              </td>
              <td>
                1
              </td>
              <td>
                A
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-5"
      >
        <div
          className="dataTables_info"
        >
          Showing 
          31
           to 
          40
           of 
          40
           entries
        </div>
      </div>
      <div
        className="col-sm-7"
      >
        <div
          className="dataTables_paginate paging_simple_numbers"
        >
          <ul
            className="pagination"
          >
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                <span
                  aria-label="Previous"
                >
                  Previous
                </span>
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                1
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                2
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                3
              </a>
            </li>
            <li
              className="active"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                4
              </a>
            </li>
            <li
              className="disabled"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
                style={
                  Object {
                    "pointerEvents": "none",
                  }
                }
                tabIndex={-1}
              >
                <span
                  aria-label="Next"
                >
                  Next
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataTable total items less than page count 1`] = `
<div
  style={
    Object {
      "marginLeft": 20,
      "marginRight": 20,
      "marginTop": 20,
    }
  }
>
  <div
    className="dataTables_wrapper dt-bootstrap"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <table
          className="dataTable table table-striped table-bordered"
        >
          <thead>
            <tr>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Rendering engine
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Browser
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Platform(s)
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                Engine version
              </th>
              <th
                className="sorting"
                onClick={[Function]}
              >
                CSS grade
              </th>
            </tr>
          </thead>
          <tfoot>
            <tr>
              <th>
                Rendering engine
              </th>
              <th>
                Browser
              </th>
              <th>
                Platform(s)
              </th>
              <th>
                Engine version
              </th>
              <th>
                CSS grade
              </th>
            </tr>
          </tfoot>
          <tbody>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape Browser 8
              </td>
              <td>
                Win 98SE+
              </td>
              <td>
                1.7
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Netscape Navigator 9
              </td>
              <td>
                Win 98+ / OSX.2+
              </td>
              <td>
                1.8
              </td>
              <td>
                A
              </td>
            </tr>
            <tr>
              <td>
                Gecko
              </td>
              <td>
                Mozilla 1.0
              </td>
              <td>
                Win 95+ / OSX.1+
              </td>
              <td>
                1
              </td>
              <td>
                A
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-5"
      >
        <div
          className="dataTables_info"
        >
          Showing 
          31
           to 
          33
           of 
          33
           entries
        </div>
      </div>
      <div
        className="col-sm-7"
      >
        <div
          className="dataTables_paginate paging_simple_numbers"
        >
          <ul
            className="pagination"
          >
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                <span
                  aria-label="Previous"
                >
                  Previous
                </span>
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                1
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                2
              </a>
            </li>
            <li
              className=""
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                3
              </a>
            </li>
            <li
              className="active"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
              >
                4
              </a>
            </li>
            <li
              className="disabled"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                role="button"
                style={
                  Object {
                    "pointerEvents": "none",
                  }
                }
                tabIndex={-1}
              >
                <span
                  aria-label="Next"
                >
                  Next
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DirectChat default 1`] = `
<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 20,
      "width": 400,
    }
  }
>
  <div
    className="direct-chat direct-chat-primary box box-primary"
  >
    <div
      className="box-header with-border"
    >
      <h3
        className="box-title"
      >
        Direct Chat
      </h3>
      <div
        className="box-tools"
      >
        <span
          onBlur={[Function]}
          onClick={null}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <span
            className="badge bg-light-blue"
          >
            3
          </span>
        </span>
        <button
          className="btn btn-box-tool"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-minus"
          />
        </button>
        <span
          onBlur={[Function]}
          onClick={null}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <button
            className="btn btn-box-tool"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="fa fa-comments"
            />
          </button>
        </span>
        <button
          className="btn btn-box-tool"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-times"
          />
        </button>
      </div>
    </div>
    <div
      className="box-body"
    >
      <div
        className="direct-chat-messages"
      >
        <div
          className="direct-chat-msg"
        >
          <div
            className="direct-chat-info clearfix"
          >
            <span
              className="direct-chat-name pull-left"
            >
              Alexander Pierce
            </span>
            <span
              className="direct-chat-timestamp pull-right"
            >
              23 Jan 2:00 pm
            </span>
          </div>
          <img
            alt="Message User Image"
            className="direct-chat-img"
            src="test-file-stub"
          />
          <div
            className="direct-chat-text"
          >
            Is this really for free? That's unbelievable!
          </div>
        </div>
        <div
          className="direct-chat-msg right"
        >
          <div
            className="direct-chat-info clearfix"
          >
            <span
              className="direct-chat-name pull-left"
            >
              Sarah Bullock
            </span>
            <span
              className="direct-chat-timestamp pull-right"
            >
              23 Jan 2:05 pm
            </span>
          </div>
          <img
            alt="Message User Image"
            className="direct-chat-img"
            src="test-file-stub"
          />
          <div
            className="direct-chat-text"
          >
            You better believe it!
          </div>
        </div>
      </div>
      <div
        className="direct-chat-contacts"
      >
        <ul
          className="contacts-list"
        >
          <li
            className={undefined}
            onClick={[Function]}
            role="button"
          >
            <img
              alt="User Image"
              className="contacts-list-img"
              src="test-file-stub"
            />
            <div
              className="contacts-list-info"
            >
              <div
                className="contacts-list-name"
              >
                Count Dracula
                <div
                  className="contacts-list-date pull-right"
                >
                  2/28/2015
                </div>
              </div>
              <div
                className="contacts-list-msg"
              >
                How have you been? I was...
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="box-footer"
    >
      <form
        className=""
        onSubmit={[Function]}
      >
        <span
          className="input-group"
        >
          <input
            className="form-control"
            id={undefined}
            onChange={[Function]}
            placeholder="Type Message..."
            type="text"
            value=""
          />
          <span
            className="input-group-btn"
          >
            <button
              className="btn btn-primary"
              disabled={false}
              type="submit"
            >
              Send
            </button>
          </span>
        </span>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout boxed 1`] = `
<div
  className="wrapper"
>
  <header
    className="main-header"
  >
    <a
      className="logo"
      href={undefined}
      onClick={undefined}
    >
      <span
        className="logo-lg"
      >
        <b>
          Admin
        </b>
        LTE
      </span>
      <span
        className="logo-mini"
      >
        <b>
          A
        </b>
        LT
      </span>
    </a>
    <nav
      className="navbar navbar-static-top"
    >
      <a
        className="sidebar-toggle"
        href="#"
        onClick={[Function]}
      >
        <span
          className="sr-only"
        >
          Toggle navigation
        </span>
      </a>
    </nav>
  </header>
  <aside
    className="main-sidebar"
  >
    <section
      className="sidebar"
    >
      <ul
        className="sidebar-menu"
      >
        <li
          className="header"
        >
          MAIN NAVIGATION
        </li>
      </ul>
    </section>
  </aside>
  <div
    className="content-wrapper"
  >
    <div
      className="content-header"
    >
      <h1>
        Boxed Layout
      </h1>
      <small>
        Blank example to the boxed layout
      </small>
    </div>
    <div
      className="content"
    >
      <div
        className="box"
      >
        <div
          className="box-header"
        >
          <h3
            className="box-title"
          >
            Title
          </h3>
        </div>
        <div
          className="box-body"
        >
          Start creating your amazing application!
        </div>
        <div
          className="box-footer"
        >
          Footer
        </div>
      </div>
    </div>
  </div>
  <footer
    className="main-footer"
  >
    <div
      className="pull-right"
    >
      <b>
        Version
      </b>
       2.3.11
    </div>
    <strong>
      Copyright © 2017.
    </strong>
     All rights reserved.
  </footer>
</div>
`;

exports[`Storyshots Layout collapsed sidebar 1`] = `
<div
  className="wrapper"
>
  <header
    className="main-header"
  >
    <a
      className="logo"
      href={undefined}
      onClick={undefined}
    >
      <span
        className="logo-lg"
      >
        <b>
          Admin
        </b>
        LTE
      </span>
      <span
        className="logo-mini"
      >
        <b>
          A
        </b>
        LT
      </span>
    </a>
    <nav
      className="navbar navbar-static-top"
    >
      <a
        className="sidebar-toggle"
        href="#"
        onClick={[Function]}
      >
        <span
          className="sr-only"
        >
          Toggle navigation
        </span>
      </a>
    </nav>
  </header>
  <aside
    className="main-sidebar"
  >
    <section
      className="sidebar"
    >
      <ul
        className="sidebar-menu"
      >
        <li
          className="header"
        >
          MAIN NAVIGATION
        </li>
      </ul>
    </section>
  </aside>
  <div
    className="content-wrapper"
  >
    <div
      className="content-header"
    >
      <h1>
        Boxed Layout
      </h1>
      <small>
        Blank example to the boxed layout
      </small>
    </div>
    <div
      className="content"
    >
      <div
        className="box"
      >
        <div
          className="box-header"
        >
          <h3
            className="box-title"
          >
            Title
          </h3>
        </div>
        <div
          className="box-body"
        >
          Start creating your amazing application!
        </div>
        <div
          className="box-footer"
        >
          Footer
        </div>
      </div>
    </div>
  </div>
  <footer
    className="main-footer"
  >
    <div
      className="pull-right"
    >
      <b>
        Version
      </b>
       2.3.11
    </div>
    <strong>
      Copyright © 2017.
    </strong>
     All rights reserved.
  </footer>
</div>
`;

exports[`Storyshots Layout default (fixed) 1`] = `
<div
  className="wrapper"
>
  <header
    className="main-header"
  >
    <a
      className="logo"
      href={undefined}
      onClick={undefined}
    >
      <span
        className="logo-lg"
      >
        <b>
          Admin
        </b>
        LTE
      </span>
      <span
        className="logo-mini"
      >
        <b>
          A
        </b>
        LT
      </span>
    </a>
    <nav
      className="navbar navbar-static-top"
    >
      <a
        className="sidebar-toggle"
        href="#"
        onClick={[Function]}
      >
        <span
          className="sr-only"
        >
          Toggle navigation
        </span>
      </a>
    </nav>
  </header>
  <aside
    className="main-sidebar"
  >
    <section
      className="sidebar"
    >
      <ul
        className="sidebar-menu"
      >
        <li
          className="header"
        >
          MAIN NAVIGATION
        </li>
      </ul>
    </section>
  </aside>
  <div
    className="content-wrapper"
  >
    <div
      className="content-header"
    >
      <h1>
        Fixed Layout
      </h1>
      <small>
        Blank example to the fixed layout
      </small>
    </div>
    <div
      className="content"
    >
      <div
        className="box"
      >
        <div
          className="box-header with-border"
        >
          <h3
            className="box-title"
          >
            Title
          </h3>
        </div>
        <div
          className="box-body"
        >
          Start creating your amazing application!
        </div>
        <div
          className="box-footer"
        >
          Footer
        </div>
      </div>
    </div>
  </div>
  <footer
    className="main-footer"
  >
    <div
      className="pull-right"
    >
      <b>
        Version
      </b>
       2.3.11
    </div>
    <strong>
      Copyright © 2017.
    </strong>
     All rights reserved.
  </footer>
</div>
`;
